# 3ds-friends-sysmodule

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  friends-debug.rsf  friends-release.rsf
.github/workflows/: main.yml
src/: log.rs  main.rs
src/frd/: context.rs  frda.rs  frdn.rs  frdu.rs  mod.rs  notification.rs  result.rs
src/frd/context/: ctr.rs  mock.rs  mod.rs  shared.rs
src/frd/online_play/: authentication.rs  base_request.rs  locate.rs  mod.rs  utils.rs
src/frd/save/: account.rs  friend_list.rs  mod.rs  my_data.rs
src/frd/utils/: friend_code.rs  mod.rs
src/frd/wifi/: connection_status.rs  mod.rs  state.rs
