[package]
name = "friends_sysmodule"
version = "0.1.0"
authors = ["zaksabeast <19464008+zaksabeast@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
cstr_core = "0.2"
ctr = { git = "https://github.com/zaksabeast/libctr-rs.git", rev = "a1be494" }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }
sha1 = "0.6"

[target.'cfg(target_os = "horizon")'.dependencies]
linked_list_allocator = "0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
